@@ -3,7 +3,7 @@
 *                                                                      *
 * This file is part of the FINAL CUT widget toolkit                    *
 *                                                                      *
-* Copyright 2012-2022 Markus Gans                                      *
+* Copyright 2012-2023 Markus Gans                                      *
 *                                                                      *
 * FINAL CUT is free software; you can redistribute it and/or modify    *
 * it under the terms of the GNU Lesser General Public License as       *
@@ -189,7 +189,9 @@ void SegmentView::get7Segment (const wchar_t c)
 void SegmentView::draw()
 {
   std::vector<finalcut::FVTermBuffer> vtbuffer(3);
-  finalcut::FVTermBuffer left_space{};
+  finalcut::FVTermBuffer left_space1{};
+  finalcut::FVTermBuffer left_space2{};
+  finalcut::FVTermBuffer left_space3{};
 
   FDialog::draw();
   setColor(FColor::LightGray, FColor::Black);
@@ -207,11 +209,15 @@ void SegmentView::draw()
   const std::size_t length = vtbuffer[0].getLength();
 
   if ( length < 36 )
-    left_space << finalcut::FString(36 - length, ' ');
+  {
+    left_space1 << finalcut::FString(36 - length, ' ');
+    left_space2 << finalcut::FString(36 - length, ' ');
+    left_space3 << finalcut::FString(36 - length, ' ');
+  }
 
-  print() << FPoint {4, 7} << left_space << vtbuffer[0]
-          << FPoint {4, 8} << left_space << vtbuffer[1]
-          << FPoint {4, 9} << left_space << vtbuffer[2]
+  print() << FPoint {4, 7} << left_space1 << vtbuffer[0]
+          << FPoint {4, 8} << left_space2 << vtbuffer[1]
+          << FPoint {4, 9} << left_space3 << vtbuffer[2]
           << FPoint {4, 10} << finalcut::FString{36, ' '};
 }
 
